--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <input type="text" placeholder="Discord Username" required name="Discord Username">
             </div>
             <div class="field">
-              <div class="label">Any problem Contact On <a href="indbulls.management@gmail.com">Email</a> <a href="https://www.instagram.com/indbulls.in/">Instagram</a> Or <a href="https://discord.gg/x3B8UT4paP">Discord</a></div>
+              <div class="label">Any problem Contact On Email: indbulls.management@gmail.com <br> <a href="https://www.instagram.com/indbulls.in/">Instagram</a> Or <a href="https://discord.gg/x3B8UT4paP">Discord</a></div>
             </div>
             <div class="field btns">
               <button class="prev-3 prev">Previous</button>
